fix: lottie jumping

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -76,3 +76,17 @@
     var(--ifm-color-emphasis-100) 100%
   );
 }
+
+.lottie {
+  width: 100%;
+  height: 300px;
+  justify-content: center;
+  display: flex;
+}
+
+.preview {
+  width: 100%;
+  height: 500px;
+  justify-content: center;
+  display: flex;
+}
